# sample-rest-api

./: README.md  docker-compose.yml  pyproject.toml
apispec/v1/: openapi.yml
docker/: Dockerfile
sample_rest_api/: run.py
sample_rest_api/controller/: health.py
