[tool.poetry]
name = "sample-rest-api"
version = "0.1.0"
description = ""
authors = ["Shinnosuke Kodani <kocchi.jan12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
connexion = {version = "^2.9.0", extras = ["swagger-ui"]}
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
